<resources>
    <string name="app_name">Grade Data Base</string>
    <!--Main Activity-->
    <string name="profileBtn">Empty</string>
    <string name="gradeBtn">SHOW MY GRADES</string>
    <!--Profile Activity-->
    <string name="nameText">Name:</string>
    <string name="hintNameText">Enter Name: A-Z</string>
    <string name="ageText">Age:</string>
    <string name="hintAgeText">Enter Age: 18-99</string>
    <string name="idText">ID: </string>
    <string name="hintIdText">Student ID: Max 6 Digits</string>
    <string name="hintSaveBtn">Save</string>
    <string name="editBtn">edit</string>
    <string name="convertBtn">convert grades</string>
    <string name="saved">saved</string>
    <string name="nameerror">Invalid Name Format</string>
    <string name="agerror">Invalid Age Format</string>
    <string name="iderror">Invalid ID Format</string>
    <!-- Grade Activity -->
    <string name="nameCourse">Course Title: </string>
    <string name="nameAss">Assignments: </string>
    <string name="nameAvg">Average: </string>
    <!-- Shared Preferences -->
    <string name="key">SharedKey</string>
    <string name="key2">StudentAge</string>
    <string name="key3">StudentID</string>
    <string name="SharedID">FilenameA</string>
</resources>