<?xml version="1.0" encoding="utf-8"?>
<!--  Single List Item Design -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/courseTitle"
        android:text="@string/nameCourse"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="10dip"
        android:textSize="16sp"
        android:textStyle="bold">
    </TextView>

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/labelTitle"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="10dip"
        android:textSize="16sp"
        android:textStyle="bold" >
    </TextView>

    <TextView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/courseAss"
        android:text="@string/nameAss"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="10dip"
        android:textSize="16sp"
        android:textStyle="bold">
    </TextView>

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/labelAss"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="10dip"
        android:textSize="16sp"
        android:textStyle="bold" >
    </TextView>

    <TextView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/courseAvg"
        android:text="@string/nameAvg"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="10dip"
        android:textSize="16sp"
        android:textStyle="bold">
    </TextView>

    <TextView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/labelAvg"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="10dip"
        android:textSize="16sp"
        android:textStyle="bold">
    </TextView>

</LinearLayout>